--- a/configs/harconfig.yml
+++ b/configs/harconfig.yml
@@ -35,7 +35,7 @@ SEED: 77
 NUM_WORKERS: 10  # Num of workers for data loading
 NUM_GPUS: [0]  # How many/which GPUs to use
 WANDB: True
-WANDB_KEY: '97d81dddbca83b1902e24ed795e1ccab52c29943'
+WANDB_KEY: #Enter key here
 
 
 
