--- a/configs/kpiconfig.yml
+++ b/configs/kpiconfig.yml
@@ -37,7 +37,7 @@ SEED: 77
 NUM_WORKERS: 4  # Num of workers for data loading
 NUM_GPUS: [0]  # How many/which GPUs to use
 WANDB: True
-WANDB_KEY: '97d81dddbca83b1902e24ed795e1ccab52c29943'
+WANDB_KEY: #Enter key here
 
 seeds: [42, 53, 64, 75]
 
